libs/preprocessor/tests/errors/pe13_include_not_encased/stderr.ansi
[0m[1m[38;5;9merror[PE13][0m[1m: include not encased[0m
  [0m[34m┌─[0m source.hpp:1:10
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m #include [0m[31m<something.hpp[0m
  [0m[34m│[0m          [0m[31m^^^^^^^^^^^^^^^[0m [0m[31mnot encased[0m
  [0m[34m│[0m
  [0m[34m=[0m [32mtry[0m: <something.hpp>

